--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/cookies.html"> Chocolate Cookies</a><br />
-    <a href="./recipes/lasagna.html"> Lasagna</a>
+    <a href="./recipes/lasagna.html"> Lasagna</a> <br />
+    <a href="./recipes/pasta.html"> Pasta</a>
+
 
 
 </body>
